--- a/CarWiki/style.css
+++ b/CarWiki/style.css
@@ -23,6 +23,8 @@ form {
     justify-content: center;
     align-items: center;
     margin-top: 20px;
+    position: relative;
+    bottom: 10px;
 }
 
 input[type="text"] {
@@ -45,5 +47,10 @@ button {
 button:hover {
     background-color: #ECD5BB;
 }
-
+.qoute{
+  text-align: center;
+  color: black;
+  position: relative;
+  top: 30px;
+}
 
